removed code smells added coverage